# refmgr

./: README.md  setup.cfg
docs/source/: conf.py  index.rst
src/refmgr/: __init__.py  __main__.py  bibtex.py  complete.py  config.py  importrefs.py  references.py  ui.py
src/refmgr/data/: sample.conf
