[metadata]
name = refmgr
version = 0.0.0
author = Jacob Fuchs
author_email = jacob.fuchs@web.de
description = A python program to manage references, articles etc.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/j-c-fuchs/refmgr
project_urls =
    Bug Tracker = https://github.com/j-c-fuchs/refmgr/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
